--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "modernizr": "^3.12.0"
   }
 }
