--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@moralisweb3/common-evm-utils": "^2.14.2",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
-    "modernizr": "^3.12.0"
+    "modernizr": "^3.12.0",
+    "moralis": "^2.14.2"
   }
 }
